--- a/vijay.html
+++ b/vijay.html
@@ -1,4 +1,7 @@
 <center>
-<h1>Vijay</h1>
+<h1>Alex</h1>
 </center>
 <hr>   
+<p>
+    Alex" is a name of Greek origin meaning "defender of mankind". It's often used as a nickname for Alexander or Alexandra, but can also stand alone as a given name. Additionally, "Alex" is the brand name for a cough syrup that helps relieve symptoms of the common cold and cough, such as runny nose, sneezing, watery eyes, and congestion. 
+</p>
