Added name and contact

--- a/vijay.html
+++ b/vijay.html
@@ -5,3 +5,5 @@
 <p>
     Alex" is a name of Greek origin meaning "defender of mankind". It's often used as a nickname for Alexander or Alexandra, but can also stand alone as a given name. Additionally, "Alex" is the brand name for a cough syrup that helps relieve symptoms of the common cold and cough, such as runny nose, sneezing, watery eyes, and congestion. 
 </p>
+<h3>Arun</h3>
+<p>contact:9080583254</p>
